--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="imageContainer"><img src="images/humboldt.jpg" width="1100"></img></div>
       <p class="text" style="padding-right: 1150px;">Vor rund 250 Jahren beschrieb der deutsche universalgelehrte Alexander von Humboldt ein für die damalige Zeit völlig neues Naturverständnis. Während seiner fünf jährigen Expedition auf dem nord- und südamerikanischen Kontinent (1799 - 1804) notierte er in seinem Tagebuch: "Die Welt ist wie ein Organismus, in dem alles miteinander verbunden ist". Humboldt war der Erste, der einen vom Menschen verursachten Klimawandel thematisierte und seine Beobachtungen sind heute so aktuell wie vor zwei Jahrhunderten. Auf seinen Reisen sammelte er Unmengen an Pflanzen und wissenschaftlichen Daten, welche er 1807 auf eindrückliche Weise im sogenannten "Naturgemälde" systematisch abbildete. Heute als erste Infografik bezeichnet zeigt die Abbildung einen idealisierten Querschnitt durch die Anden mit allen dort gefundenen Pflanzen und die miteinander verknüpften Messergebnisse (vgl. National Geographic, deutsche Ausgabe Juli 2019).
         <br><br>In meiner Bachelorarbeit befasste ich mich näher mit verschiedenen Aspekten von Falschnachrichten und wie Schweizer Medienhäuser damit umgehen. Die Veröffentlichungen von Humboldt wurden weder damals noch heute als Fake News bezeichnet. Doch während damaliger Wissenschaftler alles einzuordnen und zu klassifizieren versuchten, war Humboldts Vorstellung die Welt als lebendigen Mechanismus zu sehen, in dem alles miteinander verbunden ist, nicht bei allen gern gesehen. Damals wie heute werden Beobachtungen so ausgewertet, dass sie dem aktuellen Zeitgeist entsprechen. Dass Datensätze falsch interpretiert und publiziert werden, muss dabei auch gar nicht absichtlich geschehen.
-<br><br>Ich lade Sie dazu ein mit untenstehenden Infografiken zu spielen. Schnell entsteht ein ganz anderes Bild, wenn man beispielsweise nur einen Kontinent anstatt die ganze Welt mit einbezieht, oder wenn man sich auf der Zeitachse auf das letzte Jahrzehnt beschränkt anstatt mehrerer Jahrhunderte abbildet. Die Infografiken habe ich basierend auf öffentlich verfügbaren Datensätzen zur Plastikverschmutzung und Klimawandel erstellt. Mit der JavaScript Bibliothek p5.js habe ich die Datensätze so aufbereitet, dass der Benutzer die Darstellungsform interaktiv manipulieren kann. Viel Spass!
+<br><br>Ich lade Sie dazu ein mit untenstehenden Infografiken zu spielen. Schnell entsteht ein ganz anderes Bild, wenn man beispielsweise nur einen Kontinent anstatt die ganze Welt mit einbezieht, oder wenn man sich auf der Zeitachse auf das letzte Jahrzehnt beschränkt anstatt mehrerer Jahrhunderte abbildet. Die Infografiken habe ich basierend auf öffentlich verfügbaren Datensätzen zur Plastikverschmutzung und Klimawandel erstellt. Mit der JavaScript Bibliothek p5.js habe ich die Datensätze so aufbereitet, dass der Benutzer die Darstellungsform interaktiv manipulieren kann. Viel Spass! <br><br> Desktop only!
 </p>
       </div></section>
 
@@ -93,9 +93,9 @@
     <section><br>
     <div class="hintergrund"><h1>4 GLOBAL CO2 ATMOSPHERIC CONCENTRATION - Y-ACHSENWERTE UMDREHEN</h1>
     <h2>Globale, mittlere, jährliche Kohlendioxidkonzentration (CO₂) in ppm (parts per million).</h2>
-    <p class="text"></p>
+    <p class="text">Das schnelle Wachstum an CO2 Emissionen hat einen signifikanten Einfluss auf die CO2 Konzentration der Erdatmosphäre.</p>
     <p class="text">Instruktion: Durch den Button «Achsenwerte drehen» ändern sich die ppm Y-Achsenwerte von aufsteigend zu absteigend.</p></div>
-    <div id="grafik4"></div>
+    <br><br><br><div id="grafik4"></div>
     <script id="test" src="js/fall4.js"></script></section>
 
       <!-- GRAFIK 5 -->
@@ -104,9 +104,19 @@
     <div id="grafik5"></div>
     <script id="test" src="js/fall5.js"></script></section>
 
+      <!-- GRAFIK 5.2 -->
+    <section><br>
+    <div class="hintergrund"><h1>5.2</h1></div>
+    <div id="grafik52"></div>
+    <script id="test" src="js/fall52.js"></script></section>
+
       <!-- GRAFIK 6 -->
     <section><br>
-    <div class="hintergrund"><h1>6 PLASTIC WASTE GENERATION PER PERSON, 2010 - ENTGEGEN GEWOHNTENHEITEN EINFÄRBEN</h1></div>
+    <div class="hintergrund"><h1>6 PLASTIC WASTE GENERATION PER PERSON, 2010 - ENTGEGEN GEWOHNTENHEITEN EINFÄRBEN</h1>
+    <h2></h2>
+    <p class="text"></p>
+    <p class="text">Instruktion: Bewegen Sie die Maus von links nach rechts, um die Werte negativ einzufärben.</p>
+    </div>
     <div id="grafik6"></div>
     <script src="js/fall6.js"></script></section>
 </div>
