--- a/daten.html
+++ b/daten.html
@@ -39,17 +39,15 @@
 
 
         Ferner diente der Blogeintrag «5 Ways Writers Use Misleading Graphs To Manipulate You [INFOGRAPHIC]» zur Inspiration<br>
-        (vgl. <a href="https://venngage.com/blog/misleading-graphs/" target="_blank">https://venngage.com/blog/misleading-graphs/</a>)<br><br><br>
+        (vgl. <a href="https://venngage.com/blog/misleading-graphs/" target="_blank">https://venngage.com/blog/misleading-graphs/</a>)<br><br>
 
+        Bild: “Naturgemälde” von Alexander Humboldt 1807 aus seinem Buch «Ideen zu einer Geographie der Pflanzen nebst einem Naturgemälde der Tropenländer»<br><br>
 
-        Schriften:<br>
-        Lato & Raleway (c) Google Fonts <br><br>
+        Schriften: Lato & Raleway (c) Google Fonts <br><br>
 
-        Div:<br>
         Favicon: world by ATOM from the Noun Project<br>
-        Bild “Naturgemälde”: Alexander Humboldt 1807 aus seinem Buch «Ideen zu einer Geographie der Pflanzen nebst einem Naturgemälde der Tropenländer»<br>
 
-        <br><br>
+        <br>
 
         Farben:<br>
         Menü #F0FFF0<br>
