--- a/impressum.html
+++ b/impressum.html
@@ -34,15 +34,27 @@
 
        <div class="hintergrund">
          <h1>IMPRESSUM</h1>
-         <p class="text">Cindy Kipfer-Zumtaugwald <br>
+         <p class="text">
+           Copyright © 2019 <br><br>
+           Cindy Kipfer-Zumtaugwald <br>
+            Multimedia Production <br>
             3930 Visp/Wallis <br>
             cindy_zumtaugwald@hotmail.com <br><br>
             Bachelorstudiengang Multimedia Production/Media Engineering  <br><br>
             HTW – Hochschule für Technik und Wirtschaft Chur <br>
             BFH – Berner Fachhochschule<br>
             IMP – Institut für Multimedia Production<br><br><br>
-            <img src="images/logo_HTW.png" style="width:400px;   margin-left: 30px;" > </img>
-</p>
+            <img src="images/logo_HTW.png" style="width:400px;   margin-left: 30px;" > </img></p>
+
+
+       <h1>DANKSAGUNG</h1>
+       <p class="text">
+         Frau Prof. Dr. Katja Schupp <br>
+         Thesis mit Titel "Strategien von Schweizer Medienhäuser und Nachrichtenagenturen zur Vorbeugung der Verbreitung von Falschnachrichten" <br><br>
+         Herr Christian Schneider <br>
+         Vorliegendes Lehrprojekt "XZY" <br>
+
+       </p>
        </div>
 
 
