--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section>
     <div class="header" style="padding-top: 20px;">
 
-      <a class="header-link" href="index.html"><img src="images/logo.png" height="70" width="70"></a>
+      <a class="header-link" target="_blank" href="http://cindygabriella.ch/"><img src="images/logo.png" height="70" width="70"></a>
       <p class="opener"> <span class="menue"
           style="font-size:25px;text-decoration:underline;cursor:pointer;margin-left:30px;display: inline-block"
           onclick="openNav()">MENÜ</span> </p>
@@ -51,7 +51,7 @@
       <!-- INTRO -->
 
     <div class="hintergrund">
-      <h1>HUMBOLDT 1802 - ODER DIE WOHL ERSTE INFOGRAFIK</h1>
+      <h1>HUMBOLDT 1807 - ODER DIE WOHL ERSTE INFOGRAFIK</h1>
       <div class="imageContainer"><img src="images/humboldt.jpg" width="1100"></img></div>
       <p class="text" style="padding-right: 1150px;">Vor rund 250 Jahren beschrieb der deutsche universalgelehrte Alexander von Humboldt ein für die damalige Zeit völlig neues Naturverständnis. Während seiner fünf jährigen Expedition auf dem nord- und südamerikanischen Kontinent (1799 - 1804) notierte er in seinem Tagebuch: "Die Welt ist wie ein Organismus, in dem alles miteinander verbunden ist". Humboldt war der Erste, der einen vom Menschen verursachten Klimawandel thematisierte und seine Beobachtungen sind heute so aktuell wie vor zwei Jahrhunderten. Auf seinen Reisen sammelte er Unmengen an Pflanzen und wissenschaftlichen Daten, welche er 1807 auf eindrückliche Weise im sogenannten "Naturgemälde" systematisch abbildete. Heute als erste Infografik bezeichnet zeigt die Abbildung einen idealisierten Querschnitt durch die Anden mit allen dort gefundenen Pflanzen und die miteinander verknüpften Messergebnisse (vgl. National Geographic, deutsche Ausgabe Juli 2019).
         <br><br>In meiner Bachelorarbeit befasste ich mich näher mit verschiedenen Aspekten von Falschnachrichten und wie Schweizer Medienhäuser damit umgehen. Die Veröffentlichungen von Humboldt wurden weder damals noch heute als Fake News bezeichnet. Doch während damaliger Wissenschaftler alles einzuordnen und zu klassifizieren versuchten, war Humboldts Vorstellung die Welt als lebendigen Mechanismus zu sehen, in dem alles miteinander verbunden ist, nicht bei allen gern gesehen. Damals wie heute werden Beobachtungen so ausgewertet, dass sie dem aktuellen Zeitgeist entsprechen. Dass Datensätze falsch interpretiert und publiziert werden, muss dabei auch gar nicht absichtlich geschehen.
@@ -75,9 +75,9 @@
     <section><br>
     <div class="hintergrund"><h1>2 AVERAGE TEMPERATURE ANOMALY, GLOBAL - ACHSEN TAUSCHEN</h1>
     <h2>Globaler Mittelwert der Temperaturanomalität von 1850 - 2018</h2>
-    <p class="text">Es ist ersichtlich, dass die globalen Temperaturen in den letzten Jahrzenten extrem angestiegen sind.</p>
-    <p class="text">Instruktion: Durch den Button «Achsen tauschen» ändern Sie die Werte der Y-Achse (Ausgangslage sind die Jahre 1850 – 2018 als Y-Werte, alternativ die Temperaturanomalitäten in °C).</p></div>
-    <br><div id="grafik2"></div>
+    <p class="text">Globale durchschnittliche Land-Meer-Temperaturanomalie im Verhältnis zur durchschnittlichen Temperatur von 1961-1990 in Grad Celsius (° C). Es ist ersichtlich, dass die globalen Temperaturen in den letzten Jahrzenten deutlich angestiegen sind.</p>
+    <p class="text">Instruktion: Durch den Button «Achsen tauschen» ändern sich die Werte der Y-Achse (Ausgangslage sind die Jahre 1850 – 2018 als Y-Werte, alternativ die Temperaturanomalitäten in °C).</p></div>
+    <div id="grafik2"></div>
     <script src="js/fall2_temp.js"></script></section>
 
         <!-- GRAFIK 3 -->
