--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <script src="js/p5.dom.min.js"></script>
     <script src="js\d3.v5.min.js"></script>
     <script src="js\menu.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/onepage-scroll.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/onepage-scroll.css"> -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
@@ -35,16 +35,15 @@
         <h2>Mit Hilfe der Fachliteratur "Der Hund, der Eier legt: Erkennen von Fehlinformation durch Querdenken" <br> von Hans-Hermann Dubben und Hans-Peter Beck-Bornholdt
           sowie "So lügt man mit Statistik" <br> von Walter Krämer wurden 8 Prinzipien der bewussten Datenmanipulation evaluiert. <br>
         </h2>
-      </div>
 
       <br>
 
-    <div>
-      <p>1. Prinzip - die Vergrösserung oder Verkleinerung von Achsen</p>
-      <p> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+      <p class="text">1. Prinzip - die Vergrösserung oder Verkleinerung von Achsen</p>
+      <p class="text"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
 
 
-    </div>
+      </div>
+
 
     <div class="footer">
       <p>© Cindy Gabriella Kipfer-Zumtaugwald - Bachelorarbeit Multimedia Production 2019 HTW Chur</p>
