--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 
     <div class="hintergrund">
       <h1>HUMBOLDT 1807 - ODER DIE WOHL ERSTE INFOGRAFIK</h1>
-      <div class="imageContainer"><img src="images/humboldt.jpg" width="1100"></img></div>
+      <div class="imageContainer"><img class="humb" id="" src="images/humboldt.jpg"></img></div>
       <p class="text" style="padding-right: 1150px;">Vor rund 250 Jahren beschrieb der deutsche universalgelehrte Alexander von Humboldt ein für die damalige Zeit völlig neues Naturverständnis. Während seiner fünf jährigen Expedition auf dem nord- und südamerikanischen Kontinent (1799 - 1804) notierte er in seinem Tagebuch: "Die Welt ist wie ein Organismus, in dem alles miteinander verbunden ist". Humboldt war der Erste, der einen vom Menschen verursachten Klimawandel thematisierte und seine Beobachtungen sind heute so aktuell wie vor zwei Jahrhunderten. Auf seinen Reisen sammelte er Unmengen an Pflanzen und wissenschaftlichen Daten, welche er 1807 auf eindrückliche Weise im sogenannten "Naturgemälde" systematisch abbildete. Heute als erste Infografik bezeichnet zeigt die Abbildung einen idealisierten Querschnitt durch die Anden mit allen dort gefundenen Pflanzen und die miteinander verknüpften Messergebnisse (vgl. National Geographic, deutsche Ausgabe Juli 2019).
-        <br><br>In meiner Bachelorarbeit befasste ich mich näher mit verschiedenen Aspekten von Falschnachrichten und wie Schweizer Medienhäuser damit umgehen. Die Veröffentlichungen von Humboldt wurden weder damals noch heute als Fake News bezeichnet. Doch während damaliger Wissenschaftler alles einzuordnen und zu klassifizieren versuchten, war Humboldts Vorstellung die Welt als lebendigen Mechanismus zu sehen, in dem alles miteinander verbunden ist, nicht bei allen gern gesehen. Damals wie heute werden Beobachtungen so ausgewertet, dass sie dem aktuellen Zeitgeist entsprechen. Dass Datensätze falsch interpretiert und publiziert werden, muss dabei auch gar nicht absichtlich geschehen.
-<br><br>Ich lade Sie dazu ein mit untenstehenden Infografiken zu spielen. Schnell entsteht ein ganz anderes Bild, wenn man beispielsweise nur einen Kontinent anstatt die ganze Welt mit einbezieht, oder wenn man sich auf der Zeitachse auf das letzte Jahrzehnt beschränkt anstatt mehrerer Jahrhunderte abbildet. Die Infografiken habe ich basierend auf öffentlich verfügbaren Datensätzen zur Plastikverschmutzung und Klimawandel erstellt. Mit der JavaScript Bibliothek p5.js habe ich die Datensätze so aufbereitet, dass der Benutzer die Darstellungsform interaktiv manipulieren kann. Viel Spass! <br><br> Desktop only!
-</p>
+      <br><br>In meiner Bachelorarbeit befasste ich mich näher mit verschiedenen Aspekten von Falschnachrichten und wie Schweizer Medienhäuser damit umgehen. Die Veröffentlichungen von Humboldt wurden weder damals noch heute als Fake News bezeichnet. Doch während damaliger Wissenschaftler alles einzuordnen und zu klassifizieren versuchten, war Humboldts Vorstellung die Welt als lebendigen Mechanismus zu sehen, in dem alles miteinander verbunden ist, nicht bei allen gern gesehen. Damals wie heute werden Beobachtungen so ausgewertet, dass sie dem aktuellen Zeitgeist entsprechen. Dass Datensätze falsch interpretiert und publiziert werden, muss dabei auch gar nicht absichtlich geschehen.
+      <br><br>Ich lade Sie dazu ein mit untenstehenden Infografiken zu spielen. Schnell entsteht ein ganz anderes Bild, wenn man beispielsweise nur einen Kontinent anstatt die ganze Welt mit einbezieht, oder wenn man sich auf der Zeitachse auf das letzte Jahrzehnt beschränkt anstatt mehrerer Jahrhunderte abbildet. Die Infografiken habe ich basierend auf öffentlich verfügbaren Datensätzen zur Plastikverschmutzung und Klimawandel erstellt. Mit der JavaScript Bibliothek p5.js habe ich die Datensätze so aufbereitet, dass der Benutzer die Darstellungsform interaktiv manipulieren kann. Viel Spass! <br><br> Desktop only!
+      </p>
       </div></section>
 
       <!-- GRAFIK 1 -->
@@ -82,39 +82,39 @@
 
         <!-- GRAFIK 3 -->
     <section><br>
-    <div class="hintergrund"><h1>3 PLASTIC OCEAN INPUT FROM TOP 20 RIVERS, 2015 - DATEN WEGLASSEN</h1>
-    <h2>Plastikverschmutzung (in Tonnen) der Ozeane aus den 20 meist verschmutzenden Flüsse der Welt.</h2>
-    <p class="text">Die Verschmutzung aus diesen 20 Flüssen ist für über zwei Drittel der jährlichen globalen Verschmutzung verantwortlich.</p>
-    <p class="text">Instruktion: Wählen Sie die zu anzeigenden Daten (alle Kontinente, nur Asien, Südamerika oder Afrika) einfach selbst aus. </p></div>
-    <div id="grafik3"></div>
+    <div class="hintergrund"><h1>3 GLOBAL CO2 ATMOSPHERIC CONCENTRATION - Y-ACHSENWERTE UMDREHEN</h1>
+    <h2>Globale, mittlere, jährliche Kohlendioxidkonzentration (CO₂) in ppm (parts per million).</h2>
+    <p class="text">Das schnelle Wachstum an CO2 Emissionen hat einen signifikanten Einfluss auf die CO2 Konzentration der Erdatmosphäre.</p>
+    <p class="text">Instruktion: Durch den Button «Achsenwerte drehen» ändern sich die ppm Y-Achsenwerte von aufsteigend zu absteigend.</p></div>
+    <br><br><br><div id="grafik3"></div>
     <script id="test" src="js/fall3.js"></script></section>
 
         <!-- GRAFIK 4 -->
     <section><br>
-    <div class="hintergrund"><h1>4 GLOBAL CO2 ATMOSPHERIC CONCENTRATION - Y-ACHSENWERTE UMDREHEN</h1>
-    <h2>Globale, mittlere, jährliche Kohlendioxidkonzentration (CO₂) in ppm (parts per million).</h2>
-    <p class="text">Das schnelle Wachstum an CO2 Emissionen hat einen signifikanten Einfluss auf die CO2 Konzentration der Erdatmosphäre.</p>
-    <p class="text">Instruktion: Durch den Button «Achsenwerte drehen» ändern sich die ppm Y-Achsenwerte von aufsteigend zu absteigend.</p></div>
-    <br><br><br><div id="grafik4"></div>
+    <div class="hintergrund"><h1>4 PLASTIC OCEAN INPUT FROM TOP 20 RIVERS, 2015 - DATEN WEGLASSEN</h1>
+    <h2>Plastikverschmutzung (in Tonnen) der Ozeane aus den 20 meist verschmutzenden Flüsse der Welt.</h2>
+    <p class="text">Die Verschmutzung aus diesen 20 Flüssen ist für über zwei Drittel der jährlichen globalen Verschmutzung verantwortlich.</p>
+    <p class="text">Instruktion: Wählen Sie die zu anzeigenden Daten (alle Kontinente, nur Asien, Südamerika oder Afrika) einfach selbst aus.</p></div>
+    <div id="grafik4"></div>
     <script id="test" src="js/fall4.js"></script></section>
 
       <!-- GRAFIK 5 -->
     <section><br>
-    <div class="hintergrund"><h1>5 SURFACE PLASTIC MASS BY OCEAN BASIN, 2013 - FALSCHER GRAPH-TYP</h1></div>
-    <div id="grafik5"></div>
+    <div class="hintergrund"><h1>5 SURFACE PLASTIC MASS BY OCEAN BASIN, 2013 - FALSCHER GRAPH-TYP</h1>
+    <h2>Menge an Plastikmüll in Tonnen, welcher an der Meeresoberfläche in den Ozeanen oder Meeresbecken der Welt schwimmt.</h2>
+    <p class="text">Die Masse beinhaltet kleinen Mikroplastik bis hin zu Makroplastik.</p>
+    <p class="text">Instruktion: Wechseln Sie mit den Buttons zwischen Kuchen- oder Balkendiagramm hin und her.<br>
+      Das Kuchendiagramm beinhaltet fälschlicherweise auch den "Global ocean (total)" Wert und verzerrt somit das Bild. <br>Im Balkendiagramm wird dies ersichtlicher dargestellt.
+    </p>
+    </div>
+    <br><br><br><div id="grafik5"></div>
     <script id="test" src="js/fall5.js"></script></section>
-
-      <!-- GRAFIK 5.2 -->
-    <section><br>
-    <div class="hintergrund"><h1>5.2</h1></div>
-    <div id="grafik52"></div>
-    <script id="test" src="js/fall52.js"></script></section>
 
       <!-- GRAFIK 6 -->
     <section><br>
     <div class="hintergrund"><h1>6 PLASTIC WASTE GENERATION PER PERSON, 2010 - ENTGEGEN GEWOHNTENHEITEN EINFÄRBEN</h1>
-    <h2></h2>
-    <p class="text"></p>
+    <h2>Täglich erzeugter Plastikmüll pro Person in Kilogramm</h2>
+    <p class="text">Dieser tägliche Müll pro Kopf ist in gewissen Ländern wie Kuwait, Guyana, Deutschland, Niederlande, Irland oder den USA mehr als zehn Mal höher als in den restlichen Ländern.</p>
     <p class="text">Instruktion: Bewegen Sie die Maus von links nach rechts, um die Werte negativ einzufärben.</p>
     </div>
     <div id="grafik6"></div>
@@ -145,6 +145,7 @@
        direction: "vertical"            // You can now define the direction of the One Page Scroll animation. Options available are "vertical" and "horizontal". The default value is "vertical".
     });
   </script>
+
 
 
 </body>
