--- a/daten.html
+++ b/daten.html
@@ -3,7 +3,7 @@
     <script src="js/p5.dom.min.js"></script>
     <script src="js\d3.v5.min.js"></script>
     <script src="js\menu.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/onepage-scroll.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/onepage-scroll.css"> -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
