--- a/impressum.html
+++ b/impressum.html
@@ -3,9 +3,7 @@
   <script src="js/p5.dom.min.js"></script>
   <script src="js/d3.v5.min.js"></script>
   <script src="js/menu.js"></script>
-  <script src="js/p5.experience.js"></script>
-  <script src="js/p5.experience.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="css/onepage-scroll.css">
+  <!-- <link rel="stylesheet" type="text/css" href="css/onepage-scroll.css"> -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
@@ -38,26 +36,22 @@
            Copyright © 2019 <br><br>
            Cindy Kipfer-Zumtaugwald <br>
             Multimedia Production <br>
-            3930 Visp/Wallis <br>
             cindy_zumtaugwald@hotmail.com <br><br>
             Bachelorstudiengang Multimedia Production/Media Engineering  <br><br>
             HTW – Hochschule für Technik und Wirtschaft Chur <br>
             BFH – Berner Fachhochschule<br>
-            IMP – Institut für Multimedia Production<br><br><br>
-            <img src="images/logo_HTW.png" style="width:400px;   margin-left: 30px;" > </img></p>
-
+            IMP – Institut für Multimedia Production<br><br>
 
        <h1>DANKSAGUNG</h1>
        <p class="text">
          Frau Prof. Dr. Katja Schupp <br>
          Thesis mit Titel "Strategien von Schweizer Medienhäuser und Nachrichtenagenturen zur Vorbeugung der Verbreitung von Falschnachrichten" <br><br>
          Herr Christian Schneider <br>
-         Vorliegendes Lehrprojekt "XZY" <br>
-
+         Vorliegendes Lehrprojekt "Datenmanipulation" <br>
        </p>
-       </div>
 
 
+      <img src="images/logo_HTW.png" style="width:250px; padding-left:22px;" > </img></p></div>
 
 
        <div class="footer">
@@ -65,7 +59,7 @@
        </div>
 
 
-
+</div>
 
 
 </body></html>
