correct fat maxPop minPop

--- a/index.html
+++ b/index.html
@@ -81,23 +81,23 @@
     <script src="js/fall2_temp.js"></script></section> -->
 
         <!-- GRAFIK 3 -->
-    <section><br>
-    <!-- <div class="hintergrund"><h1>3 GLOBAL CO2 ATMOSPHERIC CONCENTRATION - Y-ACHSENWERTE UMDREHEN</h1>
+    <!-- <section><br>
+    <div class="hintergrund"><h1>3 GLOBAL CO2 ATMOSPHERIC CONCENTRATION - Y-ACHSENWERTE UMDREHEN</h1>
     <h2>Globale, mittlere, jährliche Kohlendioxidkonzentration (CO₂) in ppm (parts per million).</h2>
     <p class="text">Das schnelle Wachstum an CO2 Emissionen hat einen signifikanten Einfluss auf die CO2 Konzentration der Erdatmosphäre.</p>
     <p class="text">Instruktion: Durch den Button «Achsenwerte drehen» ändern sich die ppm Y-Achsenwerte von aufsteigend zu absteigend.</p></div>
-    <br><br><br> -->
+    <br><br><br>
     <div id="grafik3"></div>
-    <script id="test" src="js/fall3.js"></script></section>
+    <script id="test" src="js/fall3.js"></script></section> -->
 
         <!-- GRAFIK 4 -->
-    <!-- <section><br>
+    <section><br>
     <div class="hintergrund"><h1>4 PLASTIC OCEAN INPUT FROM TOP 20 RIVERS, 2015 - DATEN WEGLASSEN</h1>
     <h2>Plastikverschmutzung (in Tonnen) der Ozeane aus den 20 meist verschmutzenden Flüsse der Welt.</h2>
     <p class="text">Die Verschmutzung aus diesen 20 Flüssen ist für über zwei Drittel der jährlichen globalen Verschmutzung verantwortlich.</p>
     <p class="text">Instruktion: Wählen Sie die zu anzeigenden Daten (alle Kontinente, nur Asien, Südamerika oder Afrika) einfach selbst aus.</p></div>
     <div id="grafik4"></div>
-    <script id="test" src="js/fall4.js"></script></section> -->
+    <script id="test" src="js/fall4.js"></script></section>
 
       <!-- GRAFIK 5 -->
     <!-- <section><br>
