--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
       <!-- INTRO -->
 
      <div class="hintergrund">
-       <!--   <h1>HUMBOLDT 1807 - ODER DIE WOHL ERSTE INFOGRAFIK</h1>
+         <h1>HUMBOLDT 1807 - ODER DIE WOHL ERSTE INFOGRAFIK</h1>
       <div class="imageContainer"><img class="humb" id="" src="images/humboldt.jpg"></img></div>
       <p class="text" style="padding-right: 1150px;">Vor rund 250 Jahren beschrieb der deutsche universalgelehrte Alexander von Humboldt ein für die damalige Zeit völlig neues Naturverständnis. Während seiner fünf jährigen Expedition auf dem nord- und südamerikanischen Kontinent (1799 - 1804) notierte er in seinem Tagebuch: "Die Welt ist wie ein Organismus, in dem alles miteinander verbunden ist". Humboldt war der Erste, der einen vom Menschen verursachten Klimawandel thematisierte und seine Beobachtungen sind heute so aktuell wie vor zwei Jahrhunderten. Auf seinen Reisen sammelte er Unmengen an Pflanzen und wissenschaftlichen Daten, welche er 1807 auf eindrückliche Weise im sogenannten "Naturgemälde" systematisch abbildete. Heute als erste Infografik bezeichnet zeigt die Abbildung einen idealisierten Querschnitt durch die Anden mit allen dort gefundenen Pflanzen und die miteinander verknüpften Messergebnisse (vgl. National Geographic, deutsche Ausgabe Juli 2019).
       <br><br>In meiner Bachelorarbeit befasste ich mich näher mit verschiedenen Aspekten von Falschnachrichten und wie Schweizer Medienhäuser damit umgehen. Die Veröffentlichungen von Humboldt wurden weder damals noch heute als Fake News bezeichnet. Doch während damaliger Wissenschaftler alles einzuordnen und zu klassifizieren versuchten, war Humboldts Vorstellung die Welt als lebendigen Mechanismus zu sehen, in dem alles miteinander verbunden ist, nicht bei allen gern gesehen. Damals wie heute werden Beobachtungen so ausgewertet, dass sie dem aktuellen Zeitgeist entsprechen. Dass Datensätze falsch interpretiert und publiziert werden, muss dabei auch gar nicht absichtlich geschehen.
       <br><br>Ich lade Sie dazu ein mit untenstehenden Infografiken zu spielen. Schnell entsteht ein ganz anderes Bild, wenn man beispielsweise nur einen Kontinent anstatt die ganze Welt mit einbezieht, oder wenn man sich auf der Zeitachse auf das letzte Jahrzehnt beschränkt anstatt mehrerer Jahrhunderte abbildet. Die Infografiken habe ich basierend auf öffentlich verfügbaren Datensätzen zur Plastikverschmutzung und Klimawandel erstellt. Mit der JavaScript Bibliothek p5.js habe ich die Datensätze so aufbereitet, dass der Benutzer die Darstellungsform interaktiv manipulieren kann. Viel Spass! <br><br> Desktop only!
       </p>
-      </div></section> -->
+      </div></section>
 
       <!-- GRAFIK 1 -->
-    <!-- <section><br>
+    <section><br>
     <div class="hintergrund">
       <h1>1 PLASTIC, PLASTIC, PLASTIC - MANIPULATION DER Y-ACHSE</h1>
       <h2>Wie viel Plastik und Abfall produzieren wir? </h2>
@@ -68,36 +68,36 @@
       <p class="text">Instruktion: Bearbeiten Sie mit den Slidern jeweils die Skalen der Y-Achse und/oder der X-Achse. Die Aussagen der dargelegten Informationen ändern sich konstant.</p>
     </div> -->
     <!-- <style="position: relative;" damit die Slider position relative to #grafik1 platziert wird -->
-    <!-- <br><br><br><div id="grafik1" style="position: relative;"></div>
-    <script src="js/fall1.js"></script></section> -->
+ <br><br><br><div id="grafik1" style="position: relative;"></div>
+    <script src="js/fall1.js"></script></section>
 
         <!-- GRAFIK 2 -->
-    <!-- <section><br>
+    <section><br>
     <div class="hintergrund"><h1>2 AVERAGE TEMPERATURE ANOMALY, GLOBAL - ACHSEN TAUSCHEN</h1>
     <h2>Globaler Mittelwert der Temperaturanomalität von 1850 - 2018</h2>
     <p class="text">Globale durchschnittliche Land-Meer-Temperaturanomalie im Verhältnis zur durchschnittlichen Temperatur von 1961-1990 in Grad Celsius (° C). Es ist ersichtlich, dass die globalen Temperaturen in den letzten Jahrzenten deutlich angestiegen sind.</p>
     <p class="text">Instruktion: Durch den Button «Achsen tauschen» ändern sich die Werte der Y-Achse (Ausgangslage sind die Jahre 1850 – 2018 als Y-Werte, alternativ die Temperaturanomalitäten in °C).</p></div>
     <div id="grafik2"></div>
-    <script src="js/fall2_temp.js"></script></section> -->
+    <script src="js/fall2_temp.js"></script></section>
 
         <!-- GRAFIK 3 -->
-    <!-- <section><br>
+    <section><br>
     <div class="hintergrund"><h1>3 GLOBAL CO2 ATMOSPHERIC CONCENTRATION - Y-ACHSENWERTE UMDREHEN</h1>
     <h2>Globale, mittlere, jährliche Kohlendioxidkonzentration (CO₂) in ppm (parts per million).</h2>
     <p class="text">Das schnelle Wachstum an CO2 Emissionen hat einen signifikanten Einfluss auf die CO2 Konzentration der Erdatmosphäre.</p>
     <p class="text">Instruktion: Durch den Button «Achsenwerte drehen» ändern sich die ppm Y-Achsenwerte von aufsteigend zu absteigend.</p></div>
     <br><br><br>
     <div id="grafik3"></div>
-    <script id="test" src="js/fall3.js"></script></section> -->
+    <script id="test" src="js/fall3.js"></script></section>
 
         <!-- GRAFIK 4 -->
-    <!-- <section><br>
+    <section><br>
     <div class="hintergrund"><h1>4 PLASTIC OCEAN INPUT FROM TOP 20 RIVERS, 2015 - DATEN WEGLASSEN</h1>
     <h2>Plastikverschmutzung (in Tonnen) der Ozeane aus den 20 meist verschmutzenden Flüsse der Welt.</h2>
     <p class="text">Die Verschmutzung aus diesen 20 Flüssen ist für über zwei Drittel der jährlichen globalen Verschmutzung verantwortlich.</p>
     <p class="text">Instruktion: Wählen Sie die zu anzeigenden Daten (alle Kontinente, nur Asien, Südamerika oder Afrika) einfach selbst aus.</p></div>
     <div id="grafik4"></div>
-    <script id="test" src="js/fall4.js"></script></section> -->
+    <script id="test" src="js/fall4.js"></script></section>
 
       <!-- GRAFIK 5 -->
     <section><br>
@@ -112,14 +112,14 @@
     <script id="test" src="js/fall5.js"></script></section>
 
       <!-- GRAFIK 6 -->
-    <!-- <section><br>
+    <section><br>
     <div class="hintergrund"><h1>6 PLASTIC WASTE GENERATION PER PERSON, 2010 - ENTGEGEN GEWOHNTENHEITEN EINFÄRBEN</h1>
     <h2>Täglich erzeugter Plastikmüll pro Person in Kilogramm</h2>
     <p class="text">Dieser tägliche Müll pro Kopf ist in gewissen Ländern wie Kuwait, Guyana, Deutschland, Niederlande, Irland oder den USA mehr als zehn Mal höher als in den restlichen Ländern.</p>
     <p class="text">Instruktion: Bewegen Sie die Maus von links nach rechts, um die Werte negativ einzufärben.</p>
     </div>
     <div id="grafik6"></div>
-    <script src="js/fall6.js"></script></section> -->
+    <script src="js/fall6.js"></script></section>
 </div>
 
 
