--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
       </div>
 
       <div class="hintergrund">
-        <h1>DIE 8 ARTEN DER DATENMANIPULATION</h1>
+        <h1>ÜBER ... ACHT ARTEN DER DATENMANIPULATION</h1>
         <h2>Mit Hilfe der Fachliteratur "Der Hund, der Eier legt: Erkennen von Fehlinformation durch Querdenken" <br> von Hans-Hermann Dubben und Hans-Peter Beck-Bornholdt
           sowie "So lügt man mit Statistik" <br> von Walter Krämer wurden 8 Prinzipien der bewussten Datenmanipulation evaluiert. <br>
         </h2>
@@ -40,6 +40,18 @@
 
       <p class="text">1. Prinzip - die Vergrösserung oder Verkleinerung von Achsen</p>
       <p class="text"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+
+      <br><h1>ÜBER ... DIE BACHELORARBEIT</h1>
+      <h2>Strategien Schweizer Medienhäuser und Nachrichtenagenturen zur Vermeidung der Verbreitung von Fake News<br></h2>
+
+      <p class="text">Oh Fake! Wie sehr traut die Schweizer Bevölkerung den Medien überhaupt? Und was wird in den Agenturen und Medienhäusern an Recherchearbeit unternommen, damit «echte» Nachrichten publiziert werden?<br><br>
+
+      Oh Trump! Auch während der Aufbereitung der beinahe unzähligen Definitionen über Fake News kommt man an Trump nicht vorbei. Er, der den Begriff förmlich revolutionierte. Nach und nach konnte eine Definition zusammenfassend erarbeitet werden, bevor es an die zwei Empirien innerhalb der Bachelorthesis ging. Hier diente einerseits eine Sekundäranalyse bestehender Medien-Vertrauensstudien dazu, das Schweizer Medienvertrauen über die Jahre hinweg auszuwerten sowie das am meist vertraue Medium herauszufinden. Andererseits wurden mittels einer quantitativen Online-Befragung ausgewählter Schweizer Medienhäuser sowie deutschsprachigen Nachrichtenagenturen Strategien zur Vermeidung der Verbreitung von Fake News evaluiert.<br><br>
+
+      Oh Manipulation! Wie in der Thesis erläutert, finden Fakes nicht bloss auf einer textlichen Ebene statt. Auch mit Bildern, Videos oder mit Informationsgrafiken kann, auch unbewusst, manipuliert werden. Schnell entsteht ein ganz anderes Bild, wenn man beispielsweise nur einen Kontinent anstatt die ganze Welt mit einbezieht, oder wenn man sich auf der Zeitachse auf das letzte Jahrzehnt beschränkt anstatt mehrerer Jahrhunderte abbildet. Dieses Lehrprojekt zeigt verschiedene visuelle Beispiele der Datenmanipulation auf. Die mit primär p5.js erstellten Grafiken lassen sich durch den Nutzer jeweils auf eine unterschiedliche Art manipulieren, so dass sich das Bild und damit auch die Aussage entsprechend den ausgewählten Werten verändert.
+      </p>
+      <h2>Filmische Zusammenfassung<br></h2>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/Vx0EA7opBzk" style="padding-left:30px;" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
       </div>
