--- a/daten.html
+++ b/daten.html
@@ -54,9 +54,9 @@
         Hintergrund #FFFAFA <br>
         Grafik 1 #96B396 <br>
         Grafik 2 #9dc79d <br>
-        Grafik 3 #D8E5D8 <br>
-        Grafik 4 <br>
-        Grafik 5 <br>
+        Grafik 3 #c5e3d2 <br>
+        Grafik 4 #D8E5D8 <br>
+        Grafik 5 #D8E5D8 <br>
         Grafik 6
 
         <br><br>
@@ -67,7 +67,7 @@
         "How TO - Side Navigation" w3schools (vgl. <a href="https://www.w3schools.com/howto/howto_js_sidenav.asp" target="_blank">https://www.w3schools.com/howto/howto_js_sidenav.asp</a>)<br>
         p5.js (vgl. <a href="https://p5js.org/" target="_blank">https://p5js.org/</a>)<br>
         onepage-scroll (1.3.1 by Pete R., vgl. <a href="https://github.com/peachananr/onepage-scroll" target="_blank">https://github.com/peachananr/onepage-scroll</a>)<br>
-
+        Bildvergrösserung vgl. <a href=" https://gist.github.com/hysysk/3473035" target="_blank">https://gist.github.com/hysysk/3473035</a>
 
         </p>
 
