--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <!-- GRAFIK 1 -->
     <section><br>
     <div class="hintergrund">
-      <h1>1 PLASTIC, PLASTIC, PLASTIC - MANIPULATION DER Y-ACHSE</h1>
+      <h1>PLASTIC, PLASTIC, PLASTIC - MANIPULATION DER Y-ACHSE</h1>
       <h2>Wie viel Plastik und Abfall produzieren wir? </h2>
       <p class="text">Waren es 1950 noch «lediglich» weltweit 2 Millionen Tonnen/Jahr, ist die jährliche Produktion 2015 mit 381 Millionen Tonnen/Jahr bereits um das fast 200-fache gestiegen. Dies entspricht etwa der Masse von 2/3 der Weltbevölkerung. Zwischen 1950 – 2015 hat die kumulative Produktion 7.8 Billionen Tonnen Plastik erreicht, mehr als eine Tonne pro lebende Person.</p>
       <p class="text">Instruktion: Bearbeiten Sie mit den Slidern jeweils die Skalen der Y-Achse und/oder der X-Achse. Die Aussagen der dargelegten Informationen ändern sich konstant.</p>
@@ -101,7 +101,7 @@
 
         <!-- GRAFIK 2 -->
     <section><br>
-    <div class="hintergrund"><h1>2 AVERAGE TEMPERATURE ANOMALY, GLOBAL - ACHSEN TAUSCHEN</h1>
+    <div class="hintergrund"><h1>AVERAGE TEMPERATURE ANOMALY, GLOBAL - ACHSEN TAUSCHEN</h1>
     <h2>Globaler Mittelwert der Temperaturanomalität von 1850 - 2018</h2>
     <p class="text">Globale durchschnittliche Land-Meer-Temperaturanomalie im Verhältnis zur durchschnittlichen Temperatur von 1961-1990 in Grad Celsius (° C). Es ist ersichtlich, dass die globalen Temperaturen in den letzten Jahrzenten deutlich angestiegen sind.</p>
     <p class="text">Instruktion: Durch den Button «Achsen tauschen» ändern sich die Werte der Y-Achse (Ausgangslage sind die Jahre 1850 – 2018 als Y-Werte, alternativ die Temperaturanomalitäten in °C).</p></div>
@@ -110,7 +110,7 @@
 
         <!-- GRAFIK 3 -->
     <section><br>
-    <div class="hintergrund"><h1>3 GLOBAL CO2 ATMOSPHERIC CONCENTRATION - Y-ACHSENWERTE UMDREHEN</h1>
+    <div class="hintergrund"><h1>GLOBAL CO2 ATMOSPHERIC CONCENTRATION - Y-ACHSENWERTE UMDREHEN</h1>
     <h2>Globale, mittlere, jährliche Kohlendioxidkonzentration (CO₂) in ppm (parts per million).</h2>
     <p class="text">Das schnelle Wachstum an CO2 Emissionen hat einen signifikanten Einfluss auf die CO2 Konzentration der Erdatmosphäre.</p>
     <p class="text">Instruktion: Durch den Button «Achsenwerte drehen» ändern sich die ppm Y-Achsenwerte von aufsteigend zu absteigend.</p></div>
@@ -120,7 +120,7 @@
 
         <!-- GRAFIK 4 -->
     <section><br>
-    <div class="hintergrund"><h1>4 PLASTIC OCEAN INPUT FROM TOP 20 RIVERS, 2015 - DATEN WEGLASSEN</h1>
+    <div class="hintergrund"><h1>PLASTIC OCEAN INPUT FROM TOP 20 RIVERS, 2015 - DATEN WEGLASSEN</h1>
     <h2>Plastikverschmutzung (in Tonnen) der Ozeane aus den 20 meist verschmutzenden Flüsse der Welt.</h2>
     <p class="text">Die Verschmutzung aus diesen 20 Flüssen ist für über zwei Drittel der jährlichen globalen Verschmutzung verantwortlich.</p>
     <p class="text">Instruktion: Wählen Sie die zu anzeigenden Daten (alle Kontinente, nur Asien, Südamerika oder Afrika) einfach selbst aus.</p></div>
@@ -129,7 +129,7 @@
 
       <!-- GRAFIK 5 -->
     <section><br>
-    <div class="hintergrund"><h1>5 SURFACE PLASTIC MASS BY OCEAN BASIN, 2013 - FALSCHER GRAPH-TYP</h1>
+    <div class="hintergrund"><h1>SURFACE PLASTIC MASS BY OCEAN BASIN, 2013 - FALSCHER GRAPH-TYP</h1>
     <h2>Menge an Plastikmüll in Tonnen, welcher an der Meeresoberfläche in den Ozeanen oder Meeresbecken der Welt schwimmt.</h2>
     <p class="text">Die Masse beinhaltet kleinen Mikroplastik bis hin zu Makroplastik.</p>
     <p class="text">Instruktion: Wechseln Sie mit den Buttons zwischen Kuchen- oder Balkendiagramm hin und her.<br>
@@ -141,7 +141,7 @@
 
       <!-- GRAFIK 6 -->
     <section><br>
-    <div class="hintergrund"><h1>6 PLASTIC WASTE GENERATION PER PERSON, 2010 - ENTGEGEN GEWOHNTENHEITEN EINFÄRBEN</h1>
+    <div class="hintergrund"><h1>PLASTIC WASTE GENERATION PER PERSON, 2010 - ENTGEGEN GEWOHNTENHEITEN EINFÄRBEN</h1>
     <h2>Täglich erzeugter Plastikmüll pro Person in Kilogramm</h2>
     <p class="text">Dieser tägliche Müll pro Kopf ist in gewissen Ländern wie Kuwait, Guyana, Deutschland, Niederlande, Irland oder den USA mehr als zehn Mal höher als in den restlichen Ländern.</p>
     <p class="text">Instruktion: Bewegen Sie die Maus von links nach rechts, um die Werte negativ einzufärben.</p>
