--- a/impressum.html
+++ b/impressum.html
@@ -45,9 +45,9 @@
        <h1>DANKSAGUNG</h1>
        <p class="text">
          Frau Prof. Dr. Katja Schupp <br>
-         Thesis mit Titel "Strategien von Schweizer Medienhäuser und Nachrichtenagenturen zur Vorbeugung der Verbreitung von Falschnachrichten" <br><br>
+         Thesis mit Titel «Strategien von Schweizer Medienhäuser und Nachrichtenagenturen zur Vorbeugung der Verbreitung von Falschnachrichten» <br><br>
          Herr Christian Schneider <br>
-         Vorliegendes Lehrprojekt "Datenmanipulation" <br>
+         Vorliegendes Lehrprojekt «Beispiele der Datenmanipulation anhand von Informationsgrafiken» <br>
        </p>
 
 
