--- a/daten.html
+++ b/daten.html
@@ -41,7 +41,7 @@
         Ferner diente der Blogeintrag «5 Ways Writers Use Misleading Graphs To Manipulate You [INFOGRAPHIC]» zur Inspiration<br>
         (vgl. <a href="https://venngage.com/blog/misleading-graphs/" target="_blank">https://venngage.com/blog/misleading-graphs/</a>)<br><br>
 
-        Bild: “Naturgemälde” von Alexander Humboldt 1807 aus seinem Buch «Ideen zu einer Geographie der Pflanzen nebst einem Naturgemälde der Tropenländer»<br><br>
+        Bild: «Naturgemälde» von Alexander Humboldt 1807 aus seinem Buch «Ideen zu einer Geographie der Pflanzen nebst einem Naturgemälde der Tropenländer»<br><br>
 
         Schriften: Lato & Raleway (c) Google Fonts <br><br>
 
@@ -57,17 +57,16 @@
         Grafik 3 #c5e3d2 <br>
         Grafik 4 #D8E5D8 <br>
         Grafik 5 #D8E5D8 <br>
-        Grafik 6
 
         <br><br>
 
 
         Technische Inputs:<br>
-        "Data manipulation in d3.js" (vgl. <a href="https://www.d3-graph-gallery.com/graph/basic_datamanipulation.html" target="_blank">https://www.d3-graph-gallery.com/graph/basic_datamanipulation.html</a>)<br>
-        "How TO - Side Navigation" w3schools (vgl. <a href="https://www.w3schools.com/howto/howto_js_sidenav.asp" target="_blank">https://www.w3schools.com/howto/howto_js_sidenav.asp</a>)<br>
+        «Data manipulation in d3.js» (vgl. <a href="https://www.d3-graph-gallery.com/graph/basic_datamanipulation.html" target="_blank">https://www.d3-graph-gallery.com/graph/basic_datamanipulation.html</a>)<br>
+        «How TO - Side Navigation» w3schools (vgl. <a href="https://www.w3schools.com/howto/howto_js_sidenav.asp" target="_blank">https://www.w3schools.com/howto/howto_js_sidenav.asp</a>)<br>
         p5.js (vgl. <a href="https://p5js.org/" target="_blank">https://p5js.org/</a>)<br>
         onepage-scroll (1.3.1 by Pete R., vgl. <a href="https://github.com/peachananr/onepage-scroll" target="_blank">https://github.com/peachananr/onepage-scroll</a>)<br>
-        Bildvergrösserung vgl. <a href=" https://gist.github.com/hysysk/3473035" target="_blank">https://gist.github.com/hysysk/3473035</a>
+        Bildvergrösserung (vgl. <a href=" https://gist.github.com/hysysk/3473035" target="_blank">https://gist.github.com/hysysk/3473035</a>)
 
         </p>
 
