--- a/about.html
+++ b/about.html
@@ -44,25 +44,25 @@
       <p class="text">Die Festlegung der Werte für x- und y-Achsen ist massgebend für die Aussage der Grafik. Was passiert, wenn sich die beiden Achsenwerte komplett austauschen lassen, zeigt das Praxisprojekt 2 mit Daten der Temperaturanomalitäten von 1850 – 2018. Zuerst werden die Jahre als y und die Temperaturanomalitäten in °C als x definiert, per Knopfdruck werden die Werte vertauscht (Jahre als x, Temperaturanomalitäten als y).
       </p><br>
 
-      <p class="text">3. Achsenwerte umdrehen</p>
+      <p class="text">3. Prinzip - Achsenwerte umdrehen</p>
       <p class="text">Anstelle der kompletten Achsen werden bei dieser Praxis lediglich die Werte innerhalb einer Achse getauscht. Üblicherweise verhält sich die y-Achse aufsteigend, doch in diesem Fall können sich die ppm y-Achsenwerte per Knopfdruck absteigend verhalten.
       </p><br>
 
-      <p class="text">4. Daten weglassen</p>
+      <p class="text">4. Prinzip - Daten weglassen</p>
       <p class="text">Auch «Cherry Picking Data» genannt. Das Phänomen sieht vor, dass Daten passend zur ausgelegten Story zurechtgelegt werden. Weshalb alle 12 Monate in einer Achse darstellen, wenn nur jeder zweite Monat das Soll erfüllt? Oder wie im Praxisbeispiel der 20 meist verschmutzten Flüsse: Weshalb Asien mit den meisten Flüssen dazuzählen, wenn ein viel besseres Bild mit nur Südamerika oder Afrika dargestellt werden kann. Dann sind es nicht mehr die 20, sondern die 2 oder 3 meist verschmutzten Flüsse.</p><br>
 
-      <p class="text">5. Falschen Grafik-Typen wählen</p>
+      <p class="text">5. Prinzip - falschen Grafik-Typen wählen</p>
       <p class="text">Kuchendiagramme sehen toll aus, doch vielfach wäre ein Balkendiagramm zur korrekteren Darstellung die bessere Wahl, wie auch beim Praxisbeispiel 5. Da die Gesamtmenge vom Plastikmüll an den Meeresoberflächen als «Global ocean (total)» zum Datensatz gehört, verfälscht er die Darstellung des Kuchens komplett. Beim Balken hingegen wird das Total zuoberst dargestellt und ermöglich so einen Vergleich der restlichen Ozeane und Seen.</p>
       <br>
 
-      <p class="text">6. Entgegen Gewohnheiten </p>
+      <p class="text">6. Prinzip - entgegen Gewohnheiten </p>
       <p class="text">Farben sind häufig Indikatoren für eine bestimmte Stimmung oder ein Gefühl. So assoziieren Menschen beispielsweise rot mit prinzipiell negativem. Gehen wir also davon aus, dass rot = schlecht und grün = gut ist. Darauf basierend wird nun entgegen den Gewohnheiten eine Karte mit negativen Plastikmüll-Daten grün eingefärbt. Doch je grösser und heller der Kreis, desto grösser der tägliche Müll pro Kopf pro Ort. Eine Mausbewegung nach rechts offenbart die effektive, rote Einfärbung und somit auch ein anderes Bild.</p><br>
 
-      <p class="text">7. Voreingenommene Titel oder Beschriftungen</p>
+      <p class="text">7. Prinzip - voreingenommene Titel oder Beschriftungen</p>
       <p class="text">Sogenanntes «Biased Labelling», durch das der Benutzer bereits eine subjektive Meinung des Gestalters aufgedrückt bekommt und somit ein erstes Mal manipuliert wird.</p>
       <br>
 
-      <p class="text">8. Zu viele Daten präsentieren</p>
+      <p class="text">8. Prinzip - zu viele Daten präsentieren</p>
       <p class="text">= Verwirrung. Werden absichtlich zu viele Informationen präsentiert (wie die Darstellung mehrerer Werte innerhalb einer Achse), so kann für den Benutzer keine objektive Wahrnehmung gewährleistet werden. Es bietet sich dann zu viel Interpretationsraum an, was als eine Art von Manipulation angesehen wird.</p>
       <br>
 
